--- a/neon text/style.css
+++ b/neon text/style.css
@@ -1,1 +1,29 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@600&display=swap');
+body{
+    background: #333;
+}
+p{
+    margin-left: 490px;
+    font-size: 60px;
+    color: #fff;
+    font-family: 'Teko', sans-serif;
+    filter: blur(.9px);
+    text-shadow: 0 0 10px rgba(91, 164, 224, 0.712),
+                0 0 20px rgba(91, 164, 224, 0.712),
+                0 0 40px rgba(91, 164, 224, 0.712);
+}
+.paragraph{
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: -20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    letter-spacing: 2px;
+    line-height: 30px;
+    color: #fff;
+    text-shadow: 0 0 1px rgba(91, 164, 224, 0.712),
+                0 0 2px rgba(91, 164, 224, 0.712),
+                0 0 4px rgba(91, 164, 224, 0.712),
+                0 0 8px rgba(91, 164, 224, 0.712),
+                0 0 16px rgba(91, 164, 224, 0.712);
+}
